--- a/WorldFancyCars/Lamborghini.html
+++ b/WorldFancyCars/Lamborghini.html
@@ -6,8 +6,6 @@
 	<link rel="stylesheet" href="css/moain1.css">
 	<script type="text/javascript" src="js/move3.js"></script>
 	<script src="js/jquery-1.11.1.min.js"></script>
-
-
 </head>
 <body>
 	<div id="baglo">
@@ -17,15 +15,15 @@
 				<a href="index.html" ><img src="imgpxo/logo.png" alt=""></a>
 			</div>
 			<div class="navlist l" id="navlist">
-				<ul>
-					<li><a href="index.html" class="firststyle"><p class="first"></p><span>特斯拉</span></a></li>
-					<li><a href="lpl.html"><p class="second"></p><span>阿斯顿·马丁</span></a></li>
-					<li><a href="lc.html"><p class="third"></p><span>劳斯莱斯</span></a></li>
-					<li><a href="xls.html"><p class="fourth"></p><span>兰博基尼</span></a></li>
-					<li><a href="lyc.html"><p class="fifth"></p><span>丰&nbsp;&nbsp;田</span></a></li>
-					<li><a href="jcm.html"><p class="sixth"></p><span>福&nbsp;&nbsp;特</span></a></li>
-				</ul>
-			</div>
+        <ul>
+          <li><a href="index.html" class="firststyle"><p class="first"></p><span>特斯拉</span></a></li>
+          <li><a href="Winston Martin.html"><p class="second"></p><span>阿斯顿·马丁</span></a></li>
+          <li><a href="Rolls-Royce.html"><p class="third"></p><span>劳斯莱斯</span></a></li>
+          <li><a href="Lamborghini.html"><p class="fourth"></p><span>兰博基尼</span></a></li>
+          <li><a href="Toyota.html"><p class="fifth"></p><span>丰&nbsp;&nbsp;田</span></a></li>
+          <li><a href="Focus.html"><p class="sixth"></p><span>福&nbsp;&nbsp;特</span></a></li>
+        </ul>
+      </div>
 			</div>
 			<!--//////中部////-->
 
