--- a/WorldFancyCars/Winston Martin.html
+++ b/WorldFancyCars/Winston Martin.html
@@ -16,11 +16,11 @@
 
 			<div id="nav">
 				<span id="one" style="margin-left: 100px;"><a href="index.html">首页</a></span>
-				<span><a href="lpl.html">阿斯顿·马丁</a></span>
-				<span><a href="lc.html">劳斯莱斯</a></span>
-				<span><a href="xls.html">兰博基尼</a></span>
-				<span><a href="lyc.html">丰&nbsp;&nbsp;田</a></span>
-				<span><a href="jcm.html">福&nbsp;&nbsp;特</a></span>
+				<span><a href="Winston Martin.html">阿斯顿·马丁</a></span>
+				<span><a href="Rolls-Royce.html">劳斯莱斯</a></span>
+				<span><a href="Lamborghini.html">兰博基尼</a></span>
+				<span><a href="Toyota.html">丰&nbsp;&nbsp;田</a></span>
+				<span><a href="Focus.html">福&nbsp;&nbsp;特</a></span>
 				<span>经销商</span>
 				<input type="text" class="text">
 				<input type="button" class="button" value="搜索">
