--- a/WorldFancyCars/Lamborghini.html
+++ b/WorldFancyCars/Lamborghini.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>主页</title>
+	<title>兰博基尼</title>
 	<link rel="stylesheet" href="css/moain1.css">
 	<script type="text/javascript" src="js/move3.js"></script>
 	<script src="js/jquery-1.11.1.min.js"></script>
