--- a/WorldFancyCars/Focus.html
+++ b/WorldFancyCars/Focus.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title></title>
+		<title>福特</title>
 		<link rel="stylesheet" type="text/css" href="css/jcm.css"/>
 		<script type="text/javascript" src="js/jcm.js"></script>
 	    <script src="js/jquery-1.11.1.min.js"></script>
