--- a/Europedrive/index.html
+++ b/Europedrive/index.html
@@ -11,7 +11,7 @@
 	<body>
 		<div class="wrap">
 			<img class="drivetxt" src="img/drivetxt.png" alt="" />
-			<div class="inputmessage">yourtel
+			<div class="inputmessage">
 				<form action="">
 					<input id="yourname" class="yourname" type="text" name="" id="" placeholder="填写姓名" />
 					<input id="yourtel" class="yourtel" type="text" name="" id="" placeholder="手机号码" />
