--- a/Birthday/Happy Birthday.html
+++ b/Birthday/Happy Birthday.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+<audio autoplay="autoplay" loop="loop" preload="auto" src="music/HappyBirthday.mp3" type="audio/wav"></audio>
 <div class="velas">
     <div class="fuego"></div>
     <div class="fuego"></div>
@@ -254,6 +255,18 @@
     <p id="message">
        此生日贺卡献给我最最亲爱的老妈，愿老妈天天开心，健康长寿！<br />
     </p>
+    <!--<ul class="bg-bubbles">-->
+        <!--<li></li>-->
+        <!--<li></li>-->
+        <!--<li></li>-->
+        <!--<li></li>-->
+        <!--<li></li>-->
+        <!--<li></li>-->
+        <!--<li></li>-->
+        <!--<li></li>-->
+        <!--<li></li>-->
+        <!--<li></li>-->
+    <!--</ul>-->
     <!--<div class="button-style1">-->
         <!--<a href="Memories.html" class="lk1">-->
             <!--<div class="link1">-->
@@ -274,19 +287,8 @@
     <!--</div>-->
 </div>
 
-<!--<canvas id="canvas" width="200px" height="200px"></canvas>-->
-<ul class="bg-bubbles">
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-</ul>
+<canvas id="canvas" width="200px" height="200px"></canvas>
+
 <script>
     window.requestAnimFrame = ( function() {
         return window.requestAnimationFrame ||
@@ -503,8 +505,6 @@
 
     window.onload = loop;
 </script>
-
-<audio autoplay="autoplay" loop="loop" preload="auto" src="music/HappyBirthday.mp3" type="audio/wav"></audio>
 
 <!--<div style="text-align:center;margin:50px 0; font:normal 14px/24px 'MicroSoft YaHei';color:#ffffff">-->
 <!--</div>-->
