--- a/Birthday/Happy Birthday.html
+++ b/Birthday/Happy Birthday.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-<audio autoplay="autoplay" loop="loop" preload="auto" src="music/HappyBirthday.mp3" type="audio/wav"></audio>
+<audio autoplay="autoplay" loop="loop" preload="auto" src="music/HappyBirthday1.mp3" type="audio/wav"></audio>
 <div class="velas">
     <div class="fuego"></div>
     <div class="fuego"></div>
