--- a/Birthday/Happy Birthday.html
+++ b/Birthday/Happy Birthday.html
@@ -255,18 +255,18 @@
     <p id="message">
        此生日贺卡献给我最最亲爱的老妈，愿老妈天天开心，健康长寿！<br />
     </p>
-    <!--<ul class="bg-bubbles">-->
-        <!--<li></li>-->
-        <!--<li></li>-->
-        <!--<li></li>-->
-        <!--<li></li>-->
-        <!--<li></li>-->
-        <!--<li></li>-->
-        <!--<li></li>-->
-        <!--<li></li>-->
-        <!--<li></li>-->
-        <!--<li></li>-->
-    <!--</ul>-->
+    <ul class="bg-bubbles">
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
     <!--<div class="button-style1">-->
         <!--<a href="Memories.html" class="lk1">-->
             <!--<div class="link1">-->
