--- a/Birthday/Happy Birthday.html
+++ b/Birthday/Happy Birthday.html
@@ -267,24 +267,24 @@
         <li></li>
         <li></li>
     </ul>
-    <!--<div class="button-style1">-->
-        <!--<a href="Memories.html" class="lk1">-->
-            <!--<div class="link1">-->
-                <!--<div class="bt1">-->
-                    <!--我很喜欢-->
-                <!--</div>-->
-            <!--</div>-->
-        <!--</a>-->
-    <!--</div>-->
-    <!--<div class="button-style2">-->
-        <!--<a class="lk2">-->
-            <!--<div class="link2">-->
-                <!--<div class="bt1">-->
-                    <!--我不喜欢-->
-                <!--</div>-->
-            <!--</div>-->
-        <!--</a>-->
-    <!--</div>-->
+    <div class="button-style1">
+        <a href="Memories.html" class="lk1">
+            <div class="link1">
+                <div class="bt1">
+                    我很喜欢
+                </div>
+            </div>
+        </a>
+    </div>
+    <div class="button-style2">
+        <a class="lk2">
+            <div class="link2">
+                <div class="bt1">
+                    我不喜欢
+                </div>
+            </div>
+        </a>
+    </div>
 </div>
 
 <canvas id="canvas" width="200px" height="200px"></canvas>
