--- a/Birthday/HappyBirthday-1.html
+++ b/Birthday/HappyBirthday-1.html
@@ -82,19 +82,19 @@
 </div>
 
 <!--<div class="velas-5">-->
-    <!--<div class="fuego"></div>-->
-    <!--<div class="fuego"></div>-->
-    <!--<div class="fuego"></div>-->
-    <!--<div class="fuego"></div>-->
-    <!--<div class="fuego"></div>-->
+<!--<div class="fuego"></div>-->
+<!--<div class="fuego"></div>-->
+<!--<div class="fuego"></div>-->
+<!--<div class="fuego"></div>-->
+<!--<div class="fuego"></div>-->
 <!--</div>-->
 
 <!--<div class="velas5">-->
-    <!--<div class="fuego"></div>-->
-    <!--<div class="fuego"></div>-->
-    <!--<div class="fuego"></div>-->
-    <!--<div class="fuego"></div>-->
-    <!--<div class="fuego"></div>-->
+<!--<div class="fuego"></div>-->
+<!--<div class="fuego"></div>-->
+<!--<div class="fuego"></div>-->
+<!--<div class="fuego"></div>-->
+<!--<div class="fuego"></div>-->
 <!--</div>-->
 
 <svg id="cake" version="1.1" x="0px" y="0px" width="200px" height="500px" viewBox="0 0 200 500" enable-background="new 0 0 200 500" xml:space="preserve">
@@ -252,7 +252,8 @@
     </p>
     <br />
     <p id="message">
-       此生日贺卡献给我最最亲爱的老妈，愿老妈天天开心，健康长寿！<br />
+        这个世界上有两种女孩最可爱：一种是漂亮；一种是聪慧，而你是漂亮聪慧的女孩！<br />
+        此贺卡献给我们漂亮聪慧的小宁同学，希望她学业有成，天天开心，永远快乐！
     </p>
     <ul class="bg-bubbles">
         <li></li>
@@ -267,7 +268,7 @@
         <li></li>
     </ul>
     <div class="button-style1">
-        <a href="Memories.html" class="lk1">
+        <a href="BestWishes.html" class="lk1">
             <div class="link1">
                 <div class="bt1">
                     我很喜欢
