--- a/Birthday/Happy Birthday.html
+++ b/Birthday/Happy Birthday.html
@@ -252,7 +252,8 @@
     </p>
     <br />
     <p id="message">
-       此生日贺卡献给我最最亲爱的老妈，愿老妈天天开心，健康长寿！<br />
+        无论是草是宝，您都待孩儿很好。辛苦操劳,魂牵梦绕，挂心孩儿寒饥暖饱；<br/>
+        无微不至，不求回报，只图孩儿平安到老。值您生辰之际，孩儿在此为您献上生日祝福，祝您生日快乐！愿您少一些忧愁，多一些欢乐！健康长寿，幸福永相伴！<br />
     </p>
     <ul class="bg-bubbles">
         <li></li>
