--- a/Birthday/Memories.html
+++ b/Birthday/Memories.html
@@ -32,7 +32,7 @@
             text-align: center;
             font-size: 18px;
             background: #fff;
-background: pink;
+            background: pink;
             /* Center slide text vertically */
             display: -webkit-box;
             display: -ms-flexbox;
@@ -48,7 +48,8 @@ background: pink;
             align-items: center;
         }
         img{
-            width: 80%;
+            width: 60%;
+            height:80%;
         }
         .bg-bubbles {
             position: absolute;
