--- a/Birthday/Memories.html
+++ b/Birthday/Memories.html
@@ -12,7 +12,7 @@
         html, body {
             position: relative;
             height: 100%;
-            background: pink;
+            background:#ee9ca7;
         }
         body {
             background: #eee;
@@ -25,14 +25,13 @@
         .swiper-container {
             width: 100%;
             height: 100%;
-            background: pink;
+            background:#ee9ca7;
 
         }
         .swiper-slide {
             text-align: center;
             font-size: 18px;
-            background: #fff;
-            background: pink;
+            background:#ee9ca7;
             /* Center slide text vertically */
             display: -webkit-box;
             display: -ms-flexbox;
