--- a/Birthday/HappyBirthday-1.html
+++ b/Birthday/HappyBirthday-1.html
@@ -290,7 +290,7 @@
 <canvas id="canvas" width="200px" height="200px"></canvas>
 
 <script>
-    window.requestAnimFrame = ( function() {
+   /* window.requestAnimFrame = ( function() {
         return window.requestAnimationFrame ||
             window.webkitRequestAnimationFrame ||
             window.mozRequestAnimationFrame ||
@@ -503,7 +503,7 @@
         mousedown = false;
     });
 
-    window.onload = loop;
+    window.onload = loop;*/
 </script>
 
 <!--<div style="text-align:center;margin:50px 0; font:normal 14px/24px 'MicroSoft YaHei';color:#ffffff">-->
