--- a/Birthday/Memories-1.html
+++ b/Birthday/Memories-1.html
@@ -161,6 +161,18 @@
             }
         }
     </style>
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            function audioAutoPlay() {
+                var audio = document.getElementById('music');
+                audio.play();
+                document.addEventListener("WeixinJSBridgeReady", function () {
+                    audio.play();
+                }, false);
+            }
+            audioAutoPlay();
+        });
+    </script>
 </head>
 <body>
 <!-- Swiper -->
