加入文字打字效果

--- a/Birthday/index.html
+++ b/Birthday/index.html
@@ -44,8 +44,8 @@
         height: '100%'
     });
     setTimeout(function(){
-        //$('.demo').hide();
-        $('.demo').css({'opacity':'0'});
+        $('.demo').hide();
+        //$('.demo').css({'opacity':'0'});
         setTimeout(function(){
             $('.container').show();
             $('.bg-bubbles').show();
