--- a/Birthday/Happy Birthday.html
+++ b/Birthday/Happy Birthday.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Happy Birthday!</title>
     <script>
-        document.addEventListener('DOMContentLoaded', function () {
+        document.addEventListener('touchstart', function () {
             function audioAutoPlay() {
                 var audio = document.getElementById('music');
                 audio.play();
@@ -15,7 +15,7 @@
             audioAutoPlay();
         });
         wx.ready(function(){
-            document.getElementById('audio').play();
+            document.getElementById('music').play();
         });
     </script>
     <link rel="stylesheet" href="css/HappyBirthday.css" media="screen" type="text/css" />
