--- a/Birthday/Memories-1.html
+++ b/Birthday/Memories-1.html
@@ -45,6 +45,10 @@
             -webkit-align-items: center;
             align-items: center;
         }
+        img{
+            width: 60%;
+            height:80%;
+        }
         .bg-bubbles {
             position: absolute;
             top: 0;
