--- a/Birthday/HappyBirthday-1.html
+++ b/Birthday/HappyBirthday-1.html
@@ -5,6 +5,24 @@
     <title>Happy Birthday!</title>
     <link rel="stylesheet" href="css/HappyBirthday.css" media="screen" type="text/css" />
     <!--<link rel="stylesheet" type="text/css" href="css/index.css">-->
+    <style>
+        .button-style1 ,.button-style2{
+            position:relative;
+            top:75%;
+            opacity:1;
+            z-index:100;
+        }
+        .button-style1 {
+            position:absolute;
+            left:20%;
+            animation:btn1 36s;
+        }
+        .button-style2 {
+            position:absolute;
+            left:68%;
+            animation:btn2 36s;
+        }
+    </style>
 </head>
 
 <body>
