--- a/Birthday/demo-1.html
+++ b/Birthday/demo-1.html
@@ -177,7 +177,7 @@
         </div>
 
         <div class="step" data-x="4500" data-y="0" data-rotatex="180" data-thumbnail="img/thumbs/895601241627445.jpg">
-            <img src="img/4-1.jpg" />
+            <img src="img/4-1.JPG" />
         </div>
 
         <div class="step" data-x="6000" data-y="0" data-rotate="180" data-thumbnail="img/thumbs/895601241627453.jpg">
