--- a/Birthday/BestWishes.html
+++ b/Birthday/BestWishes.html
@@ -169,35 +169,35 @@
         </div>
 
         <div class="step" data-x="1500" data-y="0" data-rotatex="180" data-easing="easeInOutQuint" data-pausetime="15000" data-thumbnail="img/thumbs/895601241627428.jpg">
-            <img src="img/2-1.jpg" />
+            <img src="img/2-1.JPG" />
         </div>
 
         <div class="step" data-x="3000" data-y="0" data-rotatey="180" data-pausetime="2000" data-thumbnail="img/thumbs/895601241627432.jpg">
-            <img src="img/3-1.jpg" />
+            <img src="img/3-1.JPG" />
         </div>
 
         <div class="step" data-x="4500" data-y="0" data-rotatex="180" data-thumbnail="img/thumbs/895601241627445.jpg">
-            <img src="img/4-1.jpg" />
+            <img src="img/4-1.JPG" />
         </div>
 
         <div class="step" data-x="6000" data-y="0" data-rotate="180" data-thumbnail="img/thumbs/895601241627453.jpg">
-            <img src="img/5-1.jpg" />
+            <img src="img/5-1.JPG" />
         </div>
 
         <div class="step" data-x="7500" data-y="0" data-rotatey="180" data-thumbnail="img/thumbs/895601241627457.jpg">
-            <img src="img/6-1.jpg" />
+            <img src="img/6-1.JPG" />
         </div>
 
         <div class="step" data-x="9000" data-y="0" data-thumbnail="img/thumbs/895601241627459.jpg">
-            <img src="img/7-1.jpg" />
+            <img src="img/7-1.JPG" />
         </div>
 
         <div class="step" data-x="10500" data-y="0" data-rotate="80" data-thumbnail="img/thumbs/895601241627470.jpg">
-            <img src="img/8-1.jpg" />
+            <img src="img/8-1.JPG" />
         </div>
 
         <div class="step" data-x="12000" data-y="0" data-rotatex="180" data-thumbnail="img/thumbs/895601241627495.jpg">
-            <img src="img/9-1.jpg" />
+            <img src="img/9-1.JPG" />
         </div>
 
         <!--<div class="step" data-x="13500" data-y="0" data-rotatey="180" data-scale="0.6" data-thumbnail="img/thumbs/895601241627526.jpg">-->
