--- a/Birthday/BestWishes.html
+++ b/Birthday/BestWishes.html
@@ -149,7 +149,6 @@
 
 <body>
 <audio id="music" autoplay="autoplay" loop="loop" preload="auto" src="music/flower.mp3" type="audio/wav"></audio>
-
 <div class="container">
 
     <div id="ipresenter">
@@ -202,18 +201,18 @@
         <!--</div>-->
 
     </div>
-    <!--<ul class="bg-bubbles">-->
-        <!--<li></li>-->
-        <!--<li></li>-->
-        <!--<li></li>-->
-        <!--<li></li>-->
-        <!--<li></li>-->
-        <!--<li></li>-->
-        <!--<li></li>-->
-        <!--<li></li>-->
-        <!--<li></li>-->
-        <!--<li></li>-->
-    <!--</ul>-->
+    <ul class="bg-bubbles">
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
 
 </div>
 
