--- a/Birthday/BestWishes.html
+++ b/Birthday/BestWishes.html
@@ -137,7 +137,7 @@
 <div class="container">
 
     <div id="ipresenter">
-        <div class="step" data-x="0" data-y="0" data-thumbnail="img/thumbs/895601241627423.jpg">
+        <div class="step" data-x="0" data-y="0" data-thumbnail="img/1-1.JPG">
             <img src="img/1-1.JPG" />
         </div>
 
@@ -145,11 +145,11 @@
             <img src="img/2-1.JPG" />
         </div>
 
-        <div class="step" data-x="3000" data-y="0" data-rotatey="180" data-pausetime="2000" data-thumbnail="img/2-1.JPG">
+        <div class="step" data-x="3000" data-y="0" data-rotatey="180" data-pausetime="2000" data-thumbnail="img/3-1.JPG">
             <img src="img/3-1.JPG" />
         </div>
 
-        <div class="step" data-x="4500" data-y="0" data-rotatex="180" data-thumbnail="img/thumbs/4-1.JPG">
+        <div class="step" data-x="4500" data-y="0" data-rotatex="180" data-thumbnail="img/4-1.JPG">
             <img src="img/4-1.JPG" />
         </div>
 
