--- a/Birthday/BestWishes.html
+++ b/Birthday/BestWishes.html
@@ -149,9 +149,9 @@
             <img src="img/3-1.JPG" />
         </div>
 
-        <div class="step" data-x="4500" data-y="0" data-rotatex="180" data-thumbnail="img/4-1.JPG">
-            <img src="img/4-1.JPG" />
-        </div>
+        <!--<div class="step" data-x="4500" data-y="0" data-rotatex="180" data-thumbnail="img/4-1.JPG">-->
+            <!--<img src="img/4-1.JPG" />-->
+        <!--</div>-->
 
         <div class="step" data-x="6000" data-y="0" data-rotate="180" data-thumbnail="img/5-1.JPG">
             <img src="img/5-1.JPG" />
