--- a/Birthday/HappyBirthday-1.html
+++ b/Birthday/HappyBirthday-1.html
@@ -8,19 +8,19 @@
     <style>
         .button-style1 ,.button-style2{
             position:relative;
-            top:75%;
+            top:70%;
             opacity:1;
             z-index:100;
         }
         .button-style1 {
             position:absolute;
             left:20%;
-            animation:btn1 36s;
+            animation:btn1 30s;
         }
         .button-style2 {
             position:absolute;
             left:68%;
-            animation:btn2 36s;
+            animation:btn2 30s;
         }
     </style>
 </head>
@@ -307,7 +307,7 @@
 <canvas id="canvas" width="200px" height="200px"></canvas>
 
 <script>
-    var str="在你生日的这一天，将快乐的音符，作为礼物送给你，愿你拥有个美丽的日子，衷心地祝福你生日快乐！<br/>都说流星可以有求必应，如果可以我愿意在夜空下等待，等到一颗星星划过漆黑的夜空带着我的祝福送到你的眼前<br/>生日快乐!";
+    var str="两地路虽遥，友情心相连，今天你生日，牢牢记心间；<br/>不管多忙碌，祝愿不能忘；<br/>祝你:<br/>学业有成，<br/>爱情顺利，<br/>人生幸福，<br/>生日快乐！";
     var i = 0;
     function typing(){
         var divTyping = document.getElementById('message');
