--- a/Birthday/index.html
+++ b/Birthday/index.html
@@ -11,7 +11,7 @@
 <div class="htmleaf-container">
     <div class="wrapper">
         <div class="container">
-            <h1 class="title">生日快乐！</h1>
+            <h1 class="title">HappyBirthday！</h1>
             <form class="form">
                 <input id="userName" name="userName" type="text" placeholder="姓名">
                 <input id="pwd" name="pwd" type="password" placeholder="密码">
